--- a/src/client/styles.css
+++ b/src/client/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-color: rgb(39, 40, 34);
+  background-color: #272822;
   color: #eaeaea;
   font-family: 'Hind', sans-serif;
   padding: 16px;
